# OpenChronicle-Windows

./: .gitignore  LICENSE  README.md  install_windows.ps1  pyproject.toml
docs/: architecture.md  capture.md  config.md  mcp.md  memory-format.md  screen-ocr-setup.md  timeline.md  troubleshooting.md  windows-usage.md  windows.md  writer.md
resources/: windows-uia-dump.ps1
src/openchronicle/: __init__.py  cli.py  config.py  daemon.py  logger.py  paths.py
src/openchronicle/capture/: __init__.py  ax_capture.py  s1_parser.py  scheduler.py  screenshot.py  watcher.py  window_meta.py
src/openchronicle/mcp/: captures.py
src/openchronicle/prompts/: __init__.py  classifier.md  compact.md  schema.md  session_reduce.md  timeline_block.md
src/openchronicle/screen_ocr/: __init__.py
src/openchronicle/session/: manager.py  store.py
src/openchronicle/store/: entries.py  files.py
src/openchronicle/timeline/: aggregator.py  store.py  tick.py
src/openchronicle/writer/: agent.py  classifier.py  compact.py  llm.py  tools.py
tests/: conftest.py  test_capture_scheduler_fts.py  test_captures_fts.py  test_classifier.py  test_cli_status.py  test_config.py  test_mcp_tools.py  test_s1_parser.py  test_session_manager.py  test_session_reducer.py  test_session_tick.py  test_store.py  test_writer_agent.py  test_writer_tools.py
